--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,10 @@ coverage
 # Bower dependency directory (https://bower.io/)
 bower_components
 
+# Node Modules
+node_modules/
+*/node_modules/
+
 # node-waf configuration
 .lock-wscript
 
