--- a/front/package.json
+++ b/front/package.json
@@ -16,7 +16,12 @@
     "react-dom": "^16.13.1",
     "react-highlight": "^0.12.0",
     "react-markdown-editor": "^0.6.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "bootstrap": "^4.5.2",
+    "prop-types": "^15.7.2",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
